; ModuleID = '/home/carl/AnghaBench/bitwise/ion/extr_gen.c_gen_expr_str.c'
source_filename = "/home/carl/AnghaBench/bitwise/ion/extr_gen.c_gen_expr_str.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@gen_buf = common dso_local global i8* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @gen_expr_str(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  store i32* %0, i32** %2, align 8
  %5 = load i8*, i8** @gen_buf, align 8
  store i8* %5, i8** %3, align 8
  store i8* null, i8** @gen_buf, align 8
  %6 = load i32*, i32** %2, align 8
  %7 = call i32 @gen_expr(i32* %6)
  %8 = load i8*, i8** @gen_buf, align 8
  store i8* %8, i8** %4, align 8
  %9 = load i8*, i8** %3, align 8
  store i8* %9, i8** @gen_buf, align 8
  %10 = load i8*, i8** %4, align 8
  ret i8* %10
}

declare dso_local i32 @gen_expr(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
